TinyC_Part2/y.output
Terminals unused in grammar

    ENUM
    STRUCT
    TYPEDEF
    UNION
    ESCAPE_OPERATOR
    MACRO_OPERATOR


Grammar

    0 $accept: TRANSLATIONAL_UNIT $end

    1 PRIMARY_EXPRESSION: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | LEFT_PARANTHESIS EXPRESSION RIGHT_PARANTHESIS

    5 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
    6                   | POSTFIX_EXPRESSION LEFT_SQUARE_BRACKET EXPRESSION RIGHT_SQUARE_BRACKET
    7                   | POSTFIX_EXPRESSION LEFT_PARANTHESIS ARGUMENT_EXPRESSION_LIST_OPT RIGHT_PARANTHESIS
    8                   | POSTFIX_EXPRESSION DOT IDENTIFIER
    9                   | POSTFIX_EXPRESSION POINTER_ACCESS IDENTIFIER
   10                   | POSTFIX_EXPRESSION INCREMENT_OPERATOR
   11                   | POSTFIX_EXPRESSION DECREMENT_OPERATOR
   12                   | LEFT_PARANTHESIS TYPE_NAME RIGHT_PARANTHESIS LEFT_CURLY_BRACKET INITIALIZER_LIST RIGHT_CURLY_BRACKET
   13                   | LEFT_PARANTHESIS TYPE_NAME RIGHT_PARANTHESIS LEFT_CURLY_BRACKET INITIALIZER_LIST COMMA RIGHT_CURLY_BRACKET

   14 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
   15                         | ARGUMENT_EXPRESSION_LIST COMMA ASSIGNMENT_EXPRESSION

   16 ARGUMENT_EXPRESSION_LIST_OPT: ARGUMENT_EXPRESSION_LIST
   17                             | ε

   18 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   19                 | INCREMENT_OPERATOR UNARY_EXPRESSION
   20                 | DECREMENT_OPERATOR UNARY_EXPRESSION
   21                 | UNARY_OPEARATOR CAST_EXPRESSION
   22                 | SIZEOF UNARY_EXPRESSION
   23                 | SIZEOF LEFT_PARANTHESIS TYPE_NAME RIGHT_PARANTHESIS

   24 UNARY_OPEARATOR: ADDITION_OPERATOR
   25                | SUBTRACTION_OPERATOR
   26                | MULTIPLICATION_OPERATOR
   27                | BITWISE_AND_OPERATOR
   28                | NEGATION_OPERATOR
   29                | NOT_OPERATOR

   30 CAST_EXPRESSION: UNARY_EXPRESSION
   31                | LEFT_PARANTHESIS TYPE_NAME RIGHT_PARANTHESIS CAST_EXPRESSION

   32 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
   33                          | MULTIPLICATIVE_EXPRESSION MULTIPLICATION_OPERATOR CAST_EXPRESSION
   34                          | MULTIPLICATIVE_EXPRESSION DIVIDE_OPERATOR CAST_EXPRESSION
   35                          | MULTIPLICATIVE_EXPRESSION REMAINDER_OPERATOR CAST_EXPRESSION

   36 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   37                    | ADDITIVE_EXPRESSION ADDITION_OPERATOR MULTIPLICATIVE_EXPRESSION
   38                    | ADDITIVE_EXPRESSION SUBTRACTION_OPERATOR MULTIPLICATIVE_EXPRESSION

   39 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   40                 | SHIFT_EXPRESSION SHIFT_LEFT_OPERATOR ADDITIVE_EXPRESSION
   41                 | SHIFT_EXPRESSION SHIFT_RIGHT_OPERATOR ADDITIVE_EXPRESSION

   42 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   43                      | RELATIONAL_EXPRESSION LESS_THAN SHIFT_EXPRESSION
   44                      | RELATIONAL_EXPRESSION GREATER_THAN SHIFT_EXPRESSION
   45                      | RELATIONAL_EXPRESSION LESS_THAN_EQUAL_TO SHIFT_EXPRESSION
   46                      | RELATIONAL_EXPRESSION GREATER_THAN_EQUAL_TO SHIFT_EXPRESSION

   47 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   48                    | EQUALITY_EXPRESSION EQUALITY_OPERATOR RELATIONAL_EXPRESSION
   49                    | EQUALITY_EXPRESSION NON_EQUALITY_OPERATOR RELATIONAL_EXPRESSION

   50 AND_EXPRESSION: EQUALITY_EXPRESSION
   51               | AND_EXPRESSION BITWISE_AND_OPERATOR EQUALITY_EXPRESSION

   52 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   53                        | EXCLUSIVE_OR_EXPRESSION XOR_OPERATOR AND_EXPRESSION

   54 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   55                        | INCLUSIVE_OR_EXPRESSION BITWISE_OR_OPERATOR EXCLUSIVE_OR_EXPRESSION

   56 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   57                       | LOGICAL_AND_EXPRESSION LOGICAL_AND_OPERATOR INCLUSIVE_OR_EXPRESSION

   58 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   59                      | LOGICAL_OR_EXPRESSION LOGICAL_OR_OPERATOR LOGICAL_AND_EXPRESSION

   60 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   61                       | LOGICAL_OR_EXPRESSION TERNARY_OPERATOR EXPRESSION TERNARY_SEPERATOR CONDITIONAL_EXPRESSION

   62 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   63                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

   64 ASSIGNMENT_OPERATOR: EQUAL_OPERATOR
   65                    | ASSIGNMENT_OPERATORS

   66 EXPRESSION: ASSIGNMENT_EXPRESSION
   67           | EXPRESSION COMMA ASSIGNMENT_EXPRESSION

   68 CONSTANT_EXPRESSION: CONDITIONAL_EXPRESSION

   69 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST_OPT SEMI_COLON

   70 INIT_DECLARATOR_LIST_OPT: INIT_DECLARATOR_LIST
   71                         | ε

   72 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIERS_OPT
   73                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS_OPT
   74                       | TYPE_QUALIFIER DECLARATION_SPECIFIERS_OPT
   75                       | FUNCTION_SPECIFIER DECLARATION_SPECIFIERS_OPT

   76 DECLARATION_SPECIFIERS_OPT: DECLARATION_SPECIFIERS
   77                           | ε

   78 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   79                     | INIT_DECLARATOR_LIST COMMA INIT_DECLARATOR

   80 INIT_DECLARATOR: DECLARATOR
   81                | DECLARATOR EQUAL_OPERATOR INITIALIZER

   82 STORAGE_CLASS_SPECIFIER: EXTERN
   83                        | STATIC
   84                        | AUTO
   85                        | REGISTER

   86 TYPE_SPECIFIER: VOID
   87               | CHAR
   88               | SHORT
   89               | INT
   90               | LONG
   91               | FLOAT
   92               | DOUBLE
   93               | SIGNED
   94               | UNSIGNED
   95               | BOOL
   96               | COMPLEX
   97               | IMAGINARY

   98 SPECIFIER_QUALIFIER_LIST: TYPE_SPECIFIER SPECIFIER_QUALIFIER_LIST_OPT
   99                         | TYPE_QUALIFIER SPECIFIER_QUALIFIER_LIST_OPT

  100 SPECIFIER_QUALIFIER_LIST_OPT: SPECIFIER_QUALIFIER_LIST
  101                             | ε

  102 TYPE_QUALIFIER: CONST
  103               | RESTRICT
  104               | VOLATILE

  105 FUNCTION_SPECIFIER: INLINE

  106 DECLARATOR: POINTER_OPT DIRECT_DECLARATOR

  107 POINTER_OPT: POINTER
  108            | ε

  109 DIRECT_DECLARATOR: IDENTIFIER
  110                  | LEFT_PARANTHESIS DECLARATOR RIGHT_PARANTHESIS
  111                  | DIRECT_DECLARATOR LEFT_SQUARE_BRACKET TYPE_QUALIFIER_LIST_OPT ASSIGNMENT_EXPRESSION_OPT RIGHT_SQUARE_BRACKET
  112                  | DIRECT_DECLARATOR LEFT_SQUARE_BRACKET STATIC TYPE_QUALIFIER_LIST_OPT ASSIGNMENT_EXPRESSION RIGHT_SQUARE_BRACKET
  113                  | DIRECT_DECLARATOR LEFT_SQUARE_BRACKET TYPE_QUALIFIER_LIST STATIC ASSIGNMENT_EXPRESSION RIGHT_SQUARE_BRACKET
  114                  | DIRECT_DECLARATOR LEFT_SQUARE_BRACKET TYPE_QUALIFIER_LIST_OPT MULTIPLICATION_OPERATOR RIGHT_SQUARE_BRACKET
  115                  | DIRECT_DECLARATOR LEFT_PARANTHESIS PARAMETER_TYPE_LIST RIGHT_PARANTHESIS
  116                  | DIRECT_DECLARATOR LEFT_PARANTHESIS IDENTIFIER_LIST_OPT RIGHT_PARANTHESIS

  117 ASSIGNMENT_EXPRESSION_OPT: ASSIGNMENT_EXPRESSION
  118                          | ε

  119 POINTER: MULTIPLICATION_OPERATOR TYPE_QUALIFIER_LIST_OPT
  120        | MULTIPLICATION_OPERATOR TYPE_QUALIFIER_LIST_OPT POINTER

  121 TYPE_QUALIFIER_LIST: TYPE_QUALIFIER
  122                    | TYPE_QUALIFIER_LIST TYPE_QUALIFIER

  123 TYPE_QUALIFIER_LIST_OPT: TYPE_QUALIFIER_LIST
  124                        | ε

  125 PARAMETER_TYPE_LIST: PARAMETER_LIST
  126                    | PARAMETER_LIST COMMA TRIPLE_DOT

  127 PARAMETER_LIST: PARAMETER_DECLARATION
  128               | PARAMETER_LIST COMMA PARAMETER_DECLARATION

  129 PARAMETER_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR
  130                      | DECLARATION_SPECIFIERS

  131 IDENTIFIER_LIST: IDENTIFIER
  132                | IDENTIFIER_LIST COMMA IDENTIFIER

  133 IDENTIFIER_LIST_OPT: IDENTIFIER_LIST
  134                    | ε

  135 TYPE_NAME: SPECIFIER_QUALIFIER_LIST

  136 INITIALIZER: ASSIGNMENT_EXPRESSION
  137            | LEFT_CURLY_BRACKET INITIALIZER_LIST RIGHT_CURLY_BRACKET
  138            | LEFT_CURLY_BRACKET INITIALIZER_LIST COMMA RIGHT_CURLY_BRACKET

  139 INITIALIZER_LIST: DESIGNATION_OPT INITIALIZER
  140                 | INITIALIZER_LIST COMMA DESIGNATION_OPT INITIALIZER

  141 DESIGNATION_OPT: DESIGNATION
  142                | ε

  143 DESIGNATION: DESIGNATOR_LIST EQUAL_OPERATOR

  144 DESIGNATOR_LIST: DESIGNATOR
  145                | DESIGNATOR_LIST DESIGNATOR

  146 DESIGNATOR: LEFT_SQUARE_BRACKET CONSTANT_EXPRESSION RIGHT_SQUARE_BRACKET
  147           | DOT IDENTIFIER

  148 STATEMENT: LABELED_STATEMENT
  149          | COMPOUND_STATEMENT
  150          | EXPRESSION_STATEMENT
  151          | SELECTION_STATEMENT
  152          | ITERATION_STATEMENT
  153          | JUMP_STATEMENT

  154 LABELED_STATEMENT: IDENTIFIER TERNARY_SEPERATOR STATEMENT
  155                  | CASE CONSTANT_EXPRESSION TERNARY_SEPERATOR STATEMENT
  156                  | DEFAULT TERNARY_SEPERATOR STATEMENT

  157 COMPOUND_STATEMENT: LEFT_CURLY_BRACKET BLOCK_ITEM_LIST_OPT RIGHT_CURLY_BRACKET

  158 BLOCK_ITEM_LIST: BLOCK_ITEM
  159                | BLOCK_ITEM_LIST BLOCK_ITEM

  160 BLOCK_ITEM: DECLARATION
  161           | STATEMENT

  162 EXPRESSION_STATEMENT: EXPRESSION_OPT SEMI_COLON

  163 SELECTION_STATEMENT: IF LEFT_PARANTHESIS EXPRESSION RIGHT_PARANTHESIS STATEMENT
  164                    | IF LEFT_PARANTHESIS EXPRESSION RIGHT_PARANTHESIS STATEMENT ELSE STATEMENT
  165                    | SWITCH LEFT_PARANTHESIS EXPRESSION RIGHT_PARANTHESIS STATEMENT

  166 ITERATION_STATEMENT: WHILE LEFT_PARANTHESIS EXPRESSION RIGHT_PARANTHESIS STATEMENT
  167                    | DO STATEMENT WHILE LEFT_PARANTHESIS EXPRESSION RIGHT_PARANTHESIS SEMI_COLON
  168                    | FOR LEFT_PARANTHESIS EXPRESSION_OPT SEMI_COLON EXPRESSION_OPT ';' EXPRESSION_OPT RIGHT_PARANTHESIS STATEMENT
  169                    | FOR LEFT_PARANTHESIS DECLARATION EXPRESSION_OPT ';' EXPRESSION_OPT RIGHT_PARANTHESIS STATEMENT

  170 JUMP_STATEMENT: GOTO IDENTIFIER SEMI_COLON
  171               | CONTINUE SEMI_COLON
  172               | BREAK SEMI_COLON
  173               | RETURN EXPRESSION_OPT SEMI_COLON

  174 BLOCK_ITEM_LIST_OPT: BLOCK_ITEM_LIST
  175                    | ε

  176 EXPRESSION_OPT: EXPRESSION
  177               | ε

  178 TRANSLATIONAL_UNIT: EXTERNAL_DECLARATION
  179                   | TRANSLATIONAL_UNIT EXTERNAL_DECLARATION

  180 EXTERNAL_DECLARATION: FUNCTION_DEFINITION
  181                     | DECLARATION

  182 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR DECLARATION_LIST_OPT COMPOUND_STATEMENT

  183 DECLARATION_LIST: DECLARATION
  184                 | DECLARATION_LIST DECLARATION

  185 DECLARATION_LIST_OPT: DECLARATION_LIST
  186                     | ε


Terminals, with rules where they appear

    $end (0) 0
    ';' (59) 168 169
    error (256)
    RIGHT_PARANTHESIS (258) 4 7 12 13 23 31 110 115 116 163 164 165 166 167 168 169
    ELSE (259) 164
    AUTO (260) 84
    ENUM (261)
    RESTRICT (262) 103
    UNSIGNED (263) 94
    BREAK (264) 172
    EXTERN (265) 82
    RETURN (266) 173
    VOID (267) 86
    CASE (268) 155
    FLOAT (269) 91
    SHORT (270) 88
    VOLATILE (271) 104
    CHAR (272) 87
    FOR (273) 168 169
    SIGNED (274) 93
    WHILE (275) 166 167
    CONST (276) 102
    GOTO (277) 170
    SIZEOF (278) 22 23
    BOOL (279) 95
    CONTINUE (280) 171
    IF (281) 163 164
    STATIC (282) 83 112 113
    COMPLEX (283) 96
    DEFAULT (284) 156
    INLINE (285) 105
    STRUCT (286)
    IMAGINARY (287) 97
    DO (288) 167
    INT (289) 89
    SWITCH (290) 165
    DOUBLE (291) 92
    LONG (292) 90
    TYPEDEF (293)
    REGISTER (294) 85
    UNION (295)
    IDENTIFIER (296) 1 8 9 109 131 132 147 154 170
    STRING_LITERAL (297) 3
    CONSTANT (298) 2
    LESS_THAN (299) 43
    LESS_THAN_EQUAL_TO (300) 45
    GREATER_THAN (301) 44
    GREATER_THAN_EQUAL_TO (302) 46
    ESCAPE_OPERATOR (303)
    LEFT_SQUARE_BRACKET (304) 6 111 112 113 114 146
    RIGHT_SQUARE_BRACKET (305) 6 111 112 113 114 146
    LEFT_PARANTHESIS (306) 4 7 12 13 23 31 110 115 116 163 164 165 166 167 168 169
    LEFT_CURLY_BRACKET (307) 12 13 137 138 157
    RIGHT_CURLY_BRACKET (308) 12 13 137 138 157
    DOT (309) 8 147
    POINTER_ACCESS (310) 9
    INCREMENT_OPERATOR (311) 10 19
    DECREMENT_OPERATOR (312) 11 20
    DIVIDE_OPERATOR (313) 34
    REMAINDER_OPERATOR (314) 35
    SHIFT_LEFT_OPERATOR (315) 40
    SHIFT_RIGHT_OPERATOR (316) 41
    EQUALITY_OPERATOR (317) 48
    NON_EQUALITY_OPERATOR (318) 49
    XOR_OPERATOR (319) 53
    BITWISE_OR_OPERATOR (320) 55
    BITWISE_AND_OPERATOR (321) 27 51
    LOGICAL_AND_OPERATOR (322) 57
    LOGICAL_OR_OPERATOR (323) 59
    TERNARY_OPERATOR (324) 61
    TERNARY_SEPERATOR (325) 61 154 155 156
    SEMI_COLON (326) 69 162 167 168 170 171 172 173
    COMMA (327) 13 15 67 79 126 128 132 138 140
    MACRO_OPERATOR (328)
    TRIPLE_DOT (329) 126
    ADDITION_OPERATOR (330) 24 37
    MULTIPLICATION_OPERATOR (331) 26 33 114 119 120
    SUBTRACTION_OPERATOR (332) 25 38
    NOT_OPERATOR (333) 29
    NEGATION_OPERATOR (334) 28
    EQUAL_OPERATOR (335) 64 81 143
    ASSIGNMENT_OPERATORS (336) 65


Nonterminals, with rules where they appear

    $accept (83)
        on left: 0
    PRIMARY_EXPRESSION (84)
        on left: 1 2 3 4
        on right: 5
    POSTFIX_EXPRESSION (85)
        on left: 5 6 7 8 9 10 11 12 13
        on right: 6 7 8 9 10 11 18
    ARGUMENT_EXPRESSION_LIST (86)
        on left: 14 15
        on right: 15 16
    ARGUMENT_EXPRESSION_LIST_OPT (87)
        on left: 16 17
        on right: 7
    UNARY_EXPRESSION (88)
        on left: 18 19 20 21 22 23
        on right: 19 20 22 30 63
    UNARY_OPEARATOR (89)
        on left: 24 25 26 27 28 29
        on right: 21
    CAST_EXPRESSION (90)
        on left: 30 31
        on right: 21 31 32 33 34 35
    MULTIPLICATIVE_EXPRESSION (91)
        on left: 32 33 34 35
        on right: 33 34 35 36 37 38
    ADDITIVE_EXPRESSION (92)
        on left: 36 37 38
        on right: 37 38 39 40 41
    SHIFT_EXPRESSION (93)
        on left: 39 40 41
        on right: 40 41 42 43 44 45 46
    RELATIONAL_EXPRESSION (94)
        on left: 42 43 44 45 46
        on right: 43 44 45 46 47 48 49
    EQUALITY_EXPRESSION (95)
        on left: 47 48 49
        on right: 48 49 50 51
    AND_EXPRESSION (96)
        on left: 50 51
        on right: 51 52 53
    EXCLUSIVE_OR_EXPRESSION (97)
        on left: 52 53
        on right: 53 54 55
    INCLUSIVE_OR_EXPRESSION (98)
        on left: 54 55
        on right: 55 56 57
    LOGICAL_AND_EXPRESSION (99)
        on left: 56 57
        on right: 57 58 59
    LOGICAL_OR_EXPRESSION (100)
        on left: 58 59
        on right: 59 60 61
    CONDITIONAL_EXPRESSION (101)
        on left: 60 61
        on right: 61 62 68
    ASSIGNMENT_EXPRESSION (102)
        on left: 62 63
        on right: 14 15 63 66 67 112 113 117 136
    ASSIGNMENT_OPERATOR (103)
        on left: 64 65
        on right: 63
    EXPRESSION (104)
        on left: 66 67
        on right: 4 6 61 67 163 164 165 166 167 176
    CONSTANT_EXPRESSION (105)
        on left: 68
        on right: 146 155
    DECLARATION (106)
        on left: 69
        on right: 160 169 181 183 184
    INIT_DECLARATOR_LIST_OPT (107)
        on left: 70 71
        on right: 69
    DECLARATION_SPECIFIERS (108)
        on left: 72 73 74 75
        on right: 69 76 129 130 182
    DECLARATION_SPECIFIERS_OPT (109)
        on left: 76 77
        on right: 72 73 74 75
    INIT_DECLARATOR_LIST (110)
        on left: 78 79
        on right: 70 79
    INIT_DECLARATOR (111)
        on left: 80 81
        on right: 78 79
    STORAGE_CLASS_SPECIFIER (112)
        on left: 82 83 84 85
        on right: 72
    TYPE_SPECIFIER (113)
        on left: 86 87 88 89 90 91 92 93 94 95 96 97
        on right: 73 98
    SPECIFIER_QUALIFIER_LIST (114)
        on left: 98 99
        on right: 100 135
    SPECIFIER_QUALIFIER_LIST_OPT (115)
        on left: 100 101
        on right: 98 99
    TYPE_QUALIFIER (116)
        on left: 102 103 104
        on right: 74 99 121 122
    FUNCTION_SPECIFIER (117)
        on left: 105
        on right: 75
    DECLARATOR (118)
        on left: 106
        on right: 80 81 110 129 182
    POINTER_OPT (119)
        on left: 107 108
        on right: 106
    DIRECT_DECLARATOR (120)
        on left: 109 110 111 112 113 114 115 116
        on right: 106 111 112 113 114 115 116
    ASSIGNMENT_EXPRESSION_OPT (121)
        on left: 117 118
        on right: 111
    POINTER (122)
        on left: 119 120
        on right: 107 120
    TYPE_QUALIFIER_LIST (123)
        on left: 121 122
        on right: 113 122 123
    TYPE_QUALIFIER_LIST_OPT (124)
        on left: 123 124
        on right: 111 112 114 119 120
    PARAMETER_TYPE_LIST (125)
        on left: 125 126
        on right: 115
    PARAMETER_LIST (126)
        on left: 127 128
        on right: 125 126 128
    PARAMETER_DECLARATION (127)
        on left: 129 130
        on right: 127 128
    IDENTIFIER_LIST (128)
        on left: 131 132
        on right: 132 133
    IDENTIFIER_LIST_OPT (129)
        on left: 133 134
        on right: 116
    TYPE_NAME (130)
        on left: 135
        on right: 12 13 23 31
    INITIALIZER (131)
        on left: 136 137 138
        on right: 81 139 140
    INITIALIZER_LIST (132)
        on left: 139 140
        on right: 12 13 137 138 140
    DESIGNATION_OPT (133)
        on left: 141 142
        on right: 139 140
    DESIGNATION (134)
        on left: 143
        on right: 141
    DESIGNATOR_LIST (135)
        on left: 144 145
        on right: 143 145
    DESIGNATOR (136)
        on left: 146 147
        on right: 144 145
    STATEMENT (137)
        on left: 148 149 150 151 152 153
        on right: 154 155 156 161 163 164 165 166 167 168 169
    LABELED_STATEMENT (138)
        on left: 154 155 156
        on right: 148
    COMPOUND_STATEMENT (139)
        on left: 157
        on right: 149 182
    BLOCK_ITEM_LIST (140)
        on left: 158 159
        on right: 159 174
    BLOCK_ITEM (141)
        on left: 160 161
        on right: 158 159
    EXPRESSION_STATEMENT (142)
        on left: 162
        on right: 150
    SELECTION_STATEMENT (143)
        on left: 163 164 165
        on right: 151
    ITERATION_STATEMENT (144)
        on left: 166 167 168 169
        on right: 152
    JUMP_STATEMENT (145)
        on left: 170 171 172 173
        on right: 153
    BLOCK_ITEM_LIST_OPT (146)
        on left: 174 175
        on right: 157
    EXPRESSION_OPT (147)
        on left: 176 177
        on right: 162 168 169 173
    TRANSLATIONAL_UNIT (148)
        on left: 178 179
        on right: 0 179
    EXTERNAL_DECLARATION (149)
        on left: 180 181
        on right: 178 179
    FUNCTION_DEFINITION (150)
        on left: 182
        on right: 180
    DECLARATION_LIST (151)
        on left: 183 184
        on right: 184 185
    DECLARATION_LIST_OPT (152)
        on left: 185 186
        on right: 182


State 0

    0 $accept: • TRANSLATIONAL_UNIT $end

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    DECLARATION              go to state 21
    DECLARATION_SPECIFIERS   go to state 22
    STORAGE_CLASS_SPECIFIER  go to state 23
    TYPE_SPECIFIER           go to state 24
    TYPE_QUALIFIER           go to state 25
    FUNCTION_SPECIFIER       go to state 26
    TRANSLATIONAL_UNIT       go to state 27
    EXTERNAL_DECLARATION     go to state 28
    FUNCTION_DEFINITION      go to state 29


State 1

   84 STORAGE_CLASS_SPECIFIER: AUTO •

    $default  reduce using rule 84 (STORAGE_CLASS_SPECIFIER)


State 2

  103 TYPE_QUALIFIER: RESTRICT •

    $default  reduce using rule 103 (TYPE_QUALIFIER)


State 3

   94 TYPE_SPECIFIER: UNSIGNED •

    $default  reduce using rule 94 (TYPE_SPECIFIER)


State 4

   82 STORAGE_CLASS_SPECIFIER: EXTERN •

    $default  reduce using rule 82 (STORAGE_CLASS_SPECIFIER)


State 5

   86 TYPE_SPECIFIER: VOID •

    $default  reduce using rule 86 (TYPE_SPECIFIER)


State 6

   91 TYPE_SPECIFIER: FLOAT •

    $default  reduce using rule 91 (TYPE_SPECIFIER)


State 7

   88 TYPE_SPECIFIER: SHORT •

    $default  reduce using rule 88 (TYPE_SPECIFIER)


State 8

  104 TYPE_QUALIFIER: VOLATILE •

    $default  reduce using rule 104 (TYPE_QUALIFIER)


State 9

   87 TYPE_SPECIFIER: CHAR •

    $default  reduce using rule 87 (TYPE_SPECIFIER)


State 10

   93 TYPE_SPECIFIER: SIGNED •

    $default  reduce using rule 93 (TYPE_SPECIFIER)


State 11

  102 TYPE_QUALIFIER: CONST •

    $default  reduce using rule 102 (TYPE_QUALIFIER)


State 12

   95 TYPE_SPECIFIER: BOOL •

    $default  reduce using rule 95 (TYPE_SPECIFIER)


State 13

   83 STORAGE_CLASS_SPECIFIER: STATIC •

    $default  reduce using rule 83 (STORAGE_CLASS_SPECIFIER)


State 14

   96 TYPE_SPECIFIER: COMPLEX •

    $default  reduce using rule 96 (TYPE_SPECIFIER)


State 15

  105 FUNCTION_SPECIFIER: INLINE •

    $default  reduce using rule 105 (FUNCTION_SPECIFIER)


State 16

   97 TYPE_SPECIFIER: IMAGINARY •

    $default  reduce using rule 97 (TYPE_SPECIFIER)


State 17

   89 TYPE_SPECIFIER: INT •

    $default  reduce using rule 89 (TYPE_SPECIFIER)


State 18

   92 TYPE_SPECIFIER: DOUBLE •

    $default  reduce using rule 92 (TYPE_SPECIFIER)


State 19

   90 TYPE_SPECIFIER: LONG •

    $default  reduce using rule 90 (TYPE_SPECIFIER)


State 20

   85 STORAGE_CLASS_SPECIFIER: REGISTER •

    $default  reduce using rule 85 (STORAGE_CLASS_SPECIFIER)


State 21

  181 EXTERNAL_DECLARATION: DECLARATION •

    $default  reduce using rule 181 (EXTERNAL_DECLARATION)


State 22

   69 DECLARATION: DECLARATION_SPECIFIERS • INIT_DECLARATOR_LIST_OPT SEMI_COLON
  182 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS • DECLARATOR DECLARATION_LIST_OPT COMPOUND_STATEMENT

    MULTIPLICATION_OPERATOR  shift, and go to state 30

    SEMI_COLON  reduce using rule 71 (INIT_DECLARATOR_LIST_OPT)
    $default    reduce using rule 108 (POINTER_OPT)

    INIT_DECLARATOR_LIST_OPT  go to state 31
    INIT_DECLARATOR_LIST      go to state 32
    INIT_DECLARATOR           go to state 33
    DECLARATOR                go to state 34
    POINTER_OPT               go to state 35
    POINTER                   go to state 36


State 23

   72 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER • DECLARATION_SPECIFIERS_OPT

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    $default  reduce using rule 77 (DECLARATION_SPECIFIERS_OPT)

    DECLARATION_SPECIFIERS      go to state 37
    DECLARATION_SPECIFIERS_OPT  go to state 38
    STORAGE_CLASS_SPECIFIER     go to state 23
    TYPE_SPECIFIER              go to state 24
    TYPE_QUALIFIER              go to state 25
    FUNCTION_SPECIFIER          go to state 26


State 24

   73 DECLARATION_SPECIFIERS: TYPE_SPECIFIER • DECLARATION_SPECIFIERS_OPT

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    $default  reduce using rule 77 (DECLARATION_SPECIFIERS_OPT)

    DECLARATION_SPECIFIERS      go to state 37
    DECLARATION_SPECIFIERS_OPT  go to state 39
    STORAGE_CLASS_SPECIFIER     go to state 23
    TYPE_SPECIFIER              go to state 24
    TYPE_QUALIFIER              go to state 25
    FUNCTION_SPECIFIER          go to state 26


State 25

   74 DECLARATION_SPECIFIERS: TYPE_QUALIFIER • DECLARATION_SPECIFIERS_OPT

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    $default  reduce using rule 77 (DECLARATION_SPECIFIERS_OPT)

    DECLARATION_SPECIFIERS      go to state 37
    DECLARATION_SPECIFIERS_OPT  go to state 40
    STORAGE_CLASS_SPECIFIER     go to state 23
    TYPE_SPECIFIER              go to state 24
    TYPE_QUALIFIER              go to state 25
    FUNCTION_SPECIFIER          go to state 26


State 26

   75 DECLARATION_SPECIFIERS: FUNCTION_SPECIFIER • DECLARATION_SPECIFIERS_OPT

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    $default  reduce using rule 77 (DECLARATION_SPECIFIERS_OPT)
